--- a/configs/resources.yaml
+++ b/configs/resources.yaml
@@ -1,20 +1,48 @@
 #'''Command-line usage resource config.'''#
 
 
-# --- call_orfs --- #
+# --- map_sort --- #
 
-bakta_threads: 20
-bakta_mem_mb: 80000
-
-
-# --- cluster_orfs --- #
-
-mmseqs_threads: 20
-mmseqs_mem_mb: 80000
+map_sort_threads: 20
+map_sort_mem_mb: 40000
 
 
-# --- run_alignments --- #
+# --- metabat2_binning --- #
 
-diamond_threads: 20
-diamond_mem_mb: 80000
+metabat2_binning_threads: 20
+metabat2_binning_mem_mb: 80000
 
+
+# --- concoct_binning --- #
+
+concoct_binning_mem_mb: 80000
+
+
+# --- semibin_binning --- #
+
+semibin_binning_threads: 20
+semibin_binning_mem_mb: 80000
+
+
+# --- maxbin2_binning --- #
+
+maxbin2_binning_threads: 20
+maxbin2_binning_mem_mb: 80000
+
+
+# --- metabinner_binning --- #
+
+metabinner_binning_threads: 20
+metabinner_binning_mem_mb: 80000
+
+
+# --- vamb_binning --- #
+
+vamb_binning_threads: 20
+vamb_binning_mem_mb: 80000
+
+
+# --- dastool_refinement --- #
+
+dastool_refinement_threads: 20
+dastool_refinement_mem_mb: 80000
