Fixed Metabinner handling, FastQ ingestion, click-default-group

--- a/configs/parameters.yaml
+++ b/configs/parameters.yaml
@@ -35,6 +35,11 @@ model_environment: 'human_gut'
 maxbin2_script: ''
 
 
+# --- metabinner_binning --- #
+
+metabinner_env: ''
+
+
 # --- das_tool_refinement --- #
 
 ext: ''
