--- a/configs/conda/binning.yaml
+++ b/configs/conda/binning.yaml
@@ -1,184 +1,191 @@
 name: binning
 channels:
-  - coecms
   - bioconda
-  - conda-forge
   - defaults
+  - conda-forge
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=1_gnu
-  - aioeasywebdav=2.4.0=py39hf3d152e_1001
-  - aiohttp=3.8.1=py39hb9d737c_1
-  - aiosignal=1.2.0=pyhd8ed1ab_0
-  - amply=0.1.4=py_0
+  - _openmp_mutex=4.5=2_gnu
+  - aioeasywebdav=2.4.0=pyha770c72_0
+  - aiohttp=3.8.5=py311h459d7ec_0
+  - aiosignal=1.3.1=pyhd8ed1ab_0
+  - amply=0.1.6=pyhd8ed1ab_0
   - appdirs=1.4.4=pyh9f0ad1d_0
-  - async-timeout=4.0.2=pyhd8ed1ab_0
+  - arrow=1.2.3=pyhd8ed1ab_0
+  - async-timeout=4.0.3=pyhd8ed1ab_0
   - attmap=0.13.2=pyhd8ed1ab_0
-  - attrs=21.4.0=pyhd8ed1ab_0
-  - backports=1.0=py_2
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - bcrypt=3.2.0=py39hb9d737c_3
-  - biopython=1.78=py39h7f8727e_0
-  - boto3=1.21.33=pyhd8ed1ab_0
-  - botocore=1.24.33=pyhd8ed1ab_0
-  - bowtie2=2.4.5=py39hd2f7db1_2
-  - brotlipy=0.7.0=py39hb9d737c_1004
-  - bump2version=1.0.1=pyh9f0ad1d_0
+  - attrs=23.1.0=pyh71513ae_1
+  - backports=1.0=pyhd8ed1ab_3
+  - backports.functools_lru_cache=1.6.5=pyhd8ed1ab_0
+  - bcrypt=3.2.2=py311hd4cff14_1
+  - binaryornot=0.4.4=py_1
+  - boto3=1.28.37=pyhd8ed1ab_0
+  - botocore=1.31.37=pyhd8ed1ab_0
+  - brotlipy=0.7.0=py311hd4cff14_1005
+  - bumpversion=0.5.3=py_1001
   - bzip2=1.0.8=h7f98852_4
-  - c-ares=1.18.1=h7f98852_0
-  - ca-certificates=2022.12.7=ha878542_0
-  - cachetools=5.0.0=pyhd8ed1ab_0
-  - certifi=2022.12.7=pyhd8ed1ab_0
-  - cffi=1.15.0=py39h4bc2ebd_0
-  - charset-normalizer=2.0.12=pyhd8ed1ab_0
-  - click=8.1.2=py39hf3d152e_0
-  - click-default-group=1.2=py_1
-  - coin-or-cbc=2.10.7=h3786ebc_0
-  - coin-or-cgl=0.60.3=he7e83c3_2
-  - coin-or-clp=1.17.6=h256e9bb_3
-  - coin-or-osi=0.108.6=h3b589db_2
-  - coin-or-utils=2.11.6=h573740c_0
-  - coincbc=2.10.7=0_metapackage
-  - configargparse=1.5.3=pyhd8ed1ab_0
+  - c-ares=1.19.1=hd590300_0
+  - ca-certificates=2023.7.22=hbcca054_0
+  - cachetools=5.3.1=pyhd8ed1ab_0
+  - certifi=2023.7.22=pyhd8ed1ab_0
+  - cffi=1.15.1=py311h409f033_3
+  - chardet=5.2.0=py311h38be061_0
+  - charset-normalizer=3.2.0=pyhd8ed1ab_0
+  - click=8.1.7=unix_pyh707e725_0
+  - click-default-group=1.2.4=pyhd8ed1ab_0
+  - coin-or-cbc=2.10.10=h9002f0b_0
+  - coin-or-cgl=0.60.7=h516709c_0
+  - coin-or-clp=1.17.8=h1ee7a9c_0
+  - coin-or-osi=0.108.8=ha2443b9_0
+  - coin-or-utils=2.11.9=hee58242_0
+  - coincbc=2.10.10=0_metapackage
+  - colorama=0.4.6=pyhd8ed1ab_0
+  - configargparse=1.7=pyhd8ed1ab_0
   - connection_pool=0.0.3=pyhd3deb0d_0
-  - cryptography=36.0.2=py39hd97740a_1
-  - datrie=0.8.2=py39h3811e60_3
-  - decorator=5.1.1=pyhd8ed1ab_0
+  - cookiecutter=2.3.0=pyh1a96a4e_0
+  - cryptography=41.0.3=py311h63ff55d_0
+  - datrie=0.8.2=py311hd4cff14_6
   - defusedxml=0.7.1=pyhd8ed1ab_0
-  - docutils=0.18.1=py39hf3d152e_1
-  - dropbox=11.29.0=pyhd8ed1ab_0
+  - docutils=0.20.1=py311h38be061_0
+  - dpath=2.1.6=pyha770c72_0
+  - dropbox=11.36.2=pyhd8ed1ab_0
+  - eido=0.2.1=pyhd8ed1ab_0
+  - exceptiongroup=1.1.3=pyhd8ed1ab_0
   - filechunkio=1.8=py_2
-  - filelock=3.6.0=pyhd8ed1ab_0
-  - frozenlist=1.3.0=py39hb9d737c_1
-  - ftputil=5.0.3=pyhd8ed1ab_0
-  - gitdb=4.0.9=pyhd8ed1ab_0
-  - gitpython=3.1.27=pyhd8ed1ab_0
-  - google-api-core=2.5.0=pyhd8ed1ab_0
-  - google-api-python-client=2.42.0=pyhd8ed1ab_0
-  - google-auth=2.6.2=pyh6c4a22f_0
-  - google-auth-httplib2=0.1.0=pyhd8ed1ab_0
-  - google-cloud-core=2.2.2=pyh6c4a22f_0
-  - google-cloud-storage=2.1.0=pyh6c4a22f_0
-  - google-crc32c=1.1.2=py39hb81f231_2
-  - google-resumable-media=2.1.0=pyh6c4a22f_0
-  - googleapis-common-protos=1.56.0=py39hf3d152e_0
-  - grpcio=1.45.0=py39h0f497a6_0
-  - htslib=1.15=h9753748_0
-  - httplib2=0.20.4=pyhd8ed1ab_0
-  - idna=3.3=pyhd8ed1ab_0
-  - importlib-metadata=4.11.3=py39hf3d152e_1
-  - importlib_resources=5.6.0=pyhd8ed1ab_0
-  - iniconfig=1.1.1=pyh9f0ad1d_0
-  - jinja2=3.1.1=pyhd8ed1ab_0
-  - jmespath=1.0.0=pyhd8ed1ab_0
-  - jsonschema=4.4.0=pyhd8ed1ab_0
-  - jupyter_core=4.9.2=py39hf3d152e_0
-  - keyutils=1.6.1=h166bdaf_0
-  - krb5=1.19.3=h3790be6_0
-  - ld_impl_linux-64=2.36.1=hea4e1c9_2
-  - libblas=3.9.0=13_linux64_openblas
-  - libcblas=3.9.0=13_linux64_openblas
+  - frozenlist=1.4.0=py311h459d7ec_0
+  - ftputil=5.0.4=pyhd8ed1ab_0
+  - gitdb=4.0.10=pyhd8ed1ab_0
+  - gitpython=3.1.32=pyhd8ed1ab_0
+  - google-api-core=2.11.1=pyhd8ed1ab_0
+  - google-api-python-client=2.97.0=pyhd8ed1ab_0
+  - google-auth=2.22.0=pyh1a96a4e_0
+  - google-auth-httplib2=0.1.0=pyhd8ed1ab_1
+  - google-cloud-core=2.3.3=pyhd8ed1ab_0
+  - google-cloud-storage=2.10.0=pyh1a96a4e_0
+  - google-crc32c=1.1.2=py311h98db957_4
+  - google-resumable-media=2.5.0=pyhd8ed1ab_0
+  - googleapis-common-protos=1.60.0=pyhd8ed1ab_0
+  - grpcio=1.57.0=py311ha6695c7_0
+  - httplib2=0.22.0=pyhd8ed1ab_0
+  - humanfriendly=10.0=py311h38be061_4
+  - idna=3.4=pyhd8ed1ab_0
+  - importlib_resources=6.0.1=pyhd8ed1ab_0
+  - iniconfig=2.0.0=pyhd8ed1ab_0
+  - jinja2=3.1.2=pyhd8ed1ab_1
+  - jmespath=1.0.1=pyhd8ed1ab_0
+  - joblib=1.3.2=pyhd8ed1ab_0
+  - jsonschema=4.19.0=pyhd8ed1ab_1
+  - jsonschema-specifications=2023.7.1=pyhd8ed1ab_0
+  - jupyter_core=5.3.1=py311h38be061_0
+  - ld_impl_linux-64=2.40=h41732ed_0
+  - libabseil=20230125.3=cxx17_h59595ed_0
+  - libblas=3.9.0=17_linux64_openblas
+  - libcblas=3.9.0=17_linux64_openblas
   - libcrc32c=1.1.2=h9c3ff4c_0
-  - libcurl=7.82.0=h7bff187_0
-  - libdeflate=1.10=h7f98852_0
-  - libedit=3.1.20191231=he28a2e2_2
-  - libev=4.33=h516909a_1
+  - libexpat=2.5.0=hcb278e6_1
   - libffi=3.4.2=h7f98852_5
-  - libgcc-ng=11.2.0=h1d223b6_14
-  - libgfortran-ng=11.2.0=h69a702a_14
-  - libgfortran5=11.2.0=h5c6108e_14
-  - libgomp=11.2.0=h1d223b6_14
-  - liblapack=3.9.0=13_linux64_openblas
-  - liblapacke=3.9.0=13_linux64_openblas
-  - libnghttp2=1.47.0=h727a467_0
+  - libgcc-ng=13.1.0=he5830b7_0
+  - libgfortran-ng=13.1.0=h69a702a_0
+  - libgfortran5=13.1.0=h15d22d2_0
+  - libgomp=13.1.0=he5830b7_0
+  - libgrpc=1.57.0=h3905398_0
+  - liblapack=3.9.0=17_linux64_openblas
+  - liblapacke=3.9.0=17_linux64_openblas
   - libnsl=2.0.0=h7f98852_0
-  - libopenblas=0.3.18=pthreads_h8fe5266_0
-  - libprotobuf=3.20.0=h6239696_0
+  - libopenblas=0.3.23=pthreads_h80387f5_0
+  - libprotobuf=4.23.3=hd1fb520_0
   - libsodium=1.0.18=h36c2ea0_1
-  - libssh2=1.10.0=ha56f1ee_2
-  - libstdcxx-ng=11.2.0=he4da1e4_14
-  - libuuid=2.32.1=h7f98852_1000
-  - libzlib=1.2.11=h166bdaf_1014
+  - libsqlite=3.43.0=h2797004_0
+  - libstdcxx-ng=13.1.0=hfd8a6a1_0
+  - libuuid=2.38.1=h0b41bf4_0
+  - libzlib=1.2.13=hd590300_5
   - logmuse=0.2.6=pyh8c360ce_0
-  - lz4-c=1.9.3=h9c3ff4c_1
-  - markupsafe=2.1.1=py39hb9d737c_1
-  - metabat2=2.12.1=1
-  - multidict=6.0.2=py39hb9d737c_1
-  - nbformat=5.3.0=pyhd8ed1ab_0
-  - ncurses=6.3=h9c3ff4c_0
-  - numpy=1.22.3=py39h18676bf_1
+  - markdown-it-py=3.0.0=pyhd8ed1ab_0
+  - markupsafe=2.1.3=py311h459d7ec_0
+  - mdurl=0.1.0=pyhd8ed1ab_0
+  - multidict=6.0.4=py311h2582759_0
+  - nbformat=5.9.2=pyhd8ed1ab_0
+  - ncurses=6.4=hcb278e6_0
+  - numpy=1.25.2=py311h64a7726_0
   - oauth2client=4.1.3=py_0
-  - openssl=1.1.1s=h7f8727e_0
-  - packaging=21.3=pyhd8ed1ab_0
-  - pandas=1.4.2=py39h1832856_0
-  - paramiko=2.10.3=pyhd8ed1ab_0
-  - peppy=0.31.2=pyhd8ed1ab_2
-  - perl=5.32.1=2_h7f98852_perl5
-  - pip=22.0.4=pyhd8ed1ab_0
+  - openssl=3.1.2=hd590300_0
+  - packaging=23.1=pyhd8ed1ab_0
+  - pandas=2.0.3=py311h320fe9a_1
+  - paramiko=3.3.1=pyhd8ed1ab_0
+  - peppy=0.35.7=pyhd8ed1ab_0
+  - pip=23.2.1=pyhd8ed1ab_0
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_0
   - plac=1.3.5=pyhd8ed1ab_0
-  - pluggy=1.0.0=py39hf3d152e_3
+  - platformdirs=3.10.0=pyhd8ed1ab_0
+  - pluggy=1.3.0=pyhd8ed1ab_0
   - ply=3.11=py_1
-  - prettytable=3.2.0=pyhd8ed1ab_0
-  - protobuf=3.20.0=py39h5a03fae_3
-  - psutil=5.9.0=py39hb9d737c_1
-  - pulp=2.6.0=py39hf3d152e_0
-  - py=1.11.0=pyh6c4a22f_0
+  - pooch=1.7.0=pyha770c72_3
+  - prettytable=3.8.0=pyhd8ed1ab_0
+  - protobuf=4.23.3=py311hbec7ed6_0
+  - psutil=5.9.5=py311h2582759_0
+  - pulp=2.7.0=py311h38be061_0
   - pyasn1=0.4.8=py_0
   - pyasn1-modules=0.2.7=py_0
   - pycparser=2.21=pyhd8ed1ab_0
-  - pygments=2.11.2=pyhd8ed1ab_0
-  - pynacl=1.5.0=py39h3811e60_0
-  - pyopenssl=22.0.0=pyhd8ed1ab_0
-  - pyparsing=3.0.7=pyhd8ed1ab_0
-  - pyrsistent=0.18.1=py39hb9d737c_1
+  - pygments=2.16.1=pyhd8ed1ab_0
+  - pynacl=1.5.0=py311hd4cff14_2
+  - pyopenssl=23.2.0=pyhd8ed1ab_1
+  - pyparsing=3.1.1=pyhd8ed1ab_0
   - pysftp=0.2.9=py_1
-  - pysocks=1.7.1=py39hf3d152e_5
-  - pytest=7.1.1=py39hf3d152e_1
-  - python=3.9.12=h9a8a25e_1_cpython
+  - pysocks=1.7.1=pyha2e5f31_6
+  - pytest=7.4.0=pyhd8ed1ab_0
+  - python=3.11.5=hab00c5b_0_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python-fastjsonschema=2.15.3=pyhd8ed1ab_0
-  - python-irodsclient=1.1.2=pyhd8ed1ab_0
-  - python_abi=3.9=2_cp39
-  - pytz=2022.1=pyhd8ed1ab_0
+  - python-fastjsonschema=2.18.0=pyhd8ed1ab_0
+  - python-irodsclient=1.1.8=pyhd8ed1ab_0
+  - python-slugify=8.0.1=pyhd8ed1ab_0
+  - python-tzdata=2023.3=pyhd8ed1ab_0
+  - python_abi=3.11=3_cp311
+  - pytz=2023.3=pyhd8ed1ab_0
   - pyu2f=0.1.5=pyhd8ed1ab_0
-  - pyyaml=6.0=py39hb9d737c_4
-  - ratelimiter=1.2.0=py_1002
-  - readline=8.1=h46c0cb4_0
-  - requests=2.27.1=pyhd8ed1ab_0
-  - retry=0.9.2=py_0
-  - rsa=4.8=pyhd8ed1ab_0
-  - s3transfer=0.5.2=pyhd8ed1ab_0
-  - samtools=1.15=h1170115_1
-  - setuptools=62.0.0=py39hf3d152e_0
+  - pyyaml=6.0.1=py311h459d7ec_0
+  - re2=2023.03.02=h8c504da_0
+  - readline=8.2=h8228510_1
+  - referencing=0.30.2=pyhd8ed1ab_0
+  - requests=2.31.0=pyhd8ed1ab_0
+  - reretry=0.11.8=pyhd8ed1ab_0
+  - rich=13.5.1=pyhd8ed1ab_0
+  - rpds-py=0.10.0=py311h46250e7_0
+  - rsa=4.9=pyhd8ed1ab_0
+  - s3transfer=0.6.2=pyhd8ed1ab_0
+  - scikit-learn=1.3.0=py311hc009520_0
+  - scipy=1.11.2=py311h64a7726_0
+  - setuptools=68.1.2=pyhd8ed1ab_0
+  - setuptools-scm=7.1.0=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
   - slacker=0.14.0=py_0
-  - smart_open=5.2.1=pyhd8ed1ab_0
+  - smart_open=6.3.0=pyhd8ed1ab_1
   - smmap=3.0.5=pyh44b312d_0
-  - snakemake=7.3.7=hdfd78af_0
-  - snakemake-minimal=7.3.7=pyhdfd78af_0
-  - sqlite=3.37.1=h4ff8645_0
+  - snakemake=7.32.3=hdfd78af_0
+  - snakemake-minimal=7.32.3=pyhdfd78af_0
   - stone=3.3.1=pyhd8ed1ab_0
   - stopit=1.1.2=py_0
-  - tabulate=0.8.9=pyhd8ed1ab_0
-  - tbb=2020.2=h4bd325d_4
+  - tabulate=0.9.0=pyhd8ed1ab_1
+  - text-unidecode=1.3=py_0
+  - threadpoolctl=3.2.0=pyha21a80b_0
+  - throttler=1.2.2=pyhd8ed1ab_0
   - tk=8.6.12=h27826a3_0
   - tomli=2.0.1=pyhd8ed1ab_0
-  - toposort=1.7=pyhd8ed1ab_0
-  - traitlets=5.1.1=pyhd8ed1ab_0
-  - typing-extensions=4.1.1=hd8ed1ab_0
-  - typing_extensions=4.1.1=pyha770c72_0
-  - tzdata=2022a=h191b570_0
-  - ubiquerg=0.6.1=pyh9f0ad1d_0
+  - toposort=1.10=pyhd8ed1ab_0
+  - traitlets=5.9.0=pyhd8ed1ab_0
+  - typing-extensions=4.7.1=hd8ed1ab_0
+  - typing_extensions=4.7.1=pyha770c72_0
+  - tzdata=2023c=h71feb2d_0
+  - ubiquerg=0.6.3=pyhd8ed1ab_0
+  - unidecode=1.3.6=pyhd8ed1ab_0
   - uritemplate=4.1.1=pyhd8ed1ab_0
-  - urllib3=1.26.9=pyhd8ed1ab_0
+  - urllib3=1.26.15=pyhd8ed1ab_0
   - veracitools=0.1.3=py_0
-  - wcwidth=0.2.5=pyh9f0ad1d_2
-  - wheel=0.37.1=pyhd8ed1ab_0
-  - wrapt=1.14.0=py39hb9d737c_1
-  - xz=5.2.5=h516909a_1
+  - wcwidth=0.2.6=pyhd8ed1ab_0
+  - wheel=0.41.2=pyhd8ed1ab_0
+  - wrapt=1.15.0=py311h2582759_0
+  - xz=5.2.6=h166bdaf_0
   - yaml=0.2.5=h7f98852_2
-  - yarl=1.7.2=py39hb9d737c_2
-  - yte=1.2.0=py39hf3d152e_0
-  - zipp=3.8.0=pyhd8ed1ab_0
-  - zlib=1.2.11=h166bdaf_1014
-  - zstd=1.5.2=ha95c52a_0
+  - yarl=1.9.2=py311h459d7ec_0
+  - yte=1.5.1=pyha770c72_2
+  - zipp=3.16.2=pyhd8ed1ab_0
