--- a/test_data/parameters.yaml
+++ b/test_data/parameters.yaml
@@ -43,3 +43,4 @@ metabinner_env: '/home/lam4003/bin/camp_binning/conda_envs/6de558979255c142cdea4
 # --- das_tool_refinement --- #
 
 ext: '/home/lam4003/bin/camp_binning/workflow/ext'
+dastool_threshold: 0.5
